Fix for readability issue on task-list
As specified in [CCN3-538] and sub-task [CCN3-701]

--- a/govuk_template/static/stylesheets/base.css
+++ b/govuk_template/static/stylesheets/base.css
@@ -2506,9 +2506,9 @@ div.error-summary ul.error-summary-list {
 .task-do-last {
   background-color: #FFFFFF;
   outline: 3px;
-  outline-color: #BFC1C3;
+  outline-color: #6F777B;
   outline-style: solid;
-  color: #BFC1C3;
+  color: #6F777B;
   width: calc(20% - 6px);
   margin: 0px 0px 0px 3px;
 }
